Imported Debian patch 1.2.3-2

--- a/debian/ferm.conf
+++ b/debian/ferm.conf
@@ -15,7 +15,7 @@ table filter {
         # allow local packages
         interface lo ACCEPT;
 
-        # respond to ping, but limit that
+        # respond to ping
         proto icmp ACCEPT; 
 
         # allow IPsec
