--- a/debian/rules
+++ b/debian/rules
@@ -18,6 +18,7 @@ clean:
 binary-indep:
 	dh_testdir -i
 	dh_testroot -i
+	dh_installdirs -i
 	dh_installdocs
 	dh_installchangelogs -i
 	dh_installinit -i
