--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,8 @@ Maintainer: Alexander Wirt <formorer@debian.org>
 Standards-Version: 3.9.3
 Build-Depends: debhelper (>= 6.0.7~)
 Build-Depends-Indep: po-debconf
+Vcs-Browser: https://github.com/formorer/pkg-ferm
+Vcs-Git: git://github.com/formorer/pkg-ferm.git
 Homepage: http://ferm.foo-projects.org/
 
 Package: ferm
