import fix for 688377
Conflicts:
	debian/changelog

--- a/debian/ferm.config
+++ b/debian/ferm.config
@@ -10,3 +10,12 @@ if ! test -f /etc/default/ferm || ! grep -q ^ENABLED= /etc/default/ferm; then
     db_input high ferm/enable || true
     db_go || true
 fi
+
+# load configuration file if it exists and read
+# value of ENABLED into Debconf database
+if test -e /etc/default/ferm && grep -q '^ENABLED=' /etc/default/ferm; then
+       . /etc/default/ferm || true
+
+       # Store values from config file into debconf db.
+       db_set ferm/enable "$ENABLED"
+fi
