Use conntrack module instead of deprecated state module

--- a/debian/ferm.conf
+++ b/debian/ferm.conf
@@ -8,8 +8,8 @@ table filter {
         policy DROP;
 
         # connection tracking
-        mod state state INVALID DROP;
-        mod state state (ESTABLISHED RELATED) ACCEPT;
+        mod conntrack ctstate INVALID DROP;
+        mod conntrack ctstate (ESTABLISHED RELATED) ACCEPT;
 
         # allow local packet
         interface lo ACCEPT;
@@ -28,15 +28,15 @@ table filter {
         policy ACCEPT;
 
         # connection tracking
-        #mod state state INVALID DROP;
-        mod state state (ESTABLISHED RELATED) ACCEPT;
+        #mod conntrack ctstate INVALID DROP;
+        mod conntrack ctstate (ESTABLISHED RELATED) ACCEPT;
     }
     chain FORWARD {
         policy DROP;
 
         # connection tracking
-        mod state state INVALID DROP;
-        mod state state (ESTABLISHED RELATED) ACCEPT;
+        mod conntrack ctstate INVALID DROP;
+        mod conntrack ctstate (ESTABLISHED RELATED) ACCEPT;
     }
 }
 
