--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,11 @@ Homepage: http://ferm.foo-projects.org/
 
 Package: ferm
 Architecture: all
-Depends: perl (>= 5.6), iptables (>= 1.3), debconf (>= 1.2.0), lsb-base (>= 3.0-6), ${misc:Depends}
+Depends: debconf (>= 1.2.0),
+         iptables (>= 1.3),
+         lsb-base (>= 3.0-6),
+         perl (>= 5.6),
+         ${misc:Depends}
 Recommends: libnet-dns-perl
 Description: maintain and setup complicated firewall rules
  ferm is a frontend for iptables. It reads the rules from a
