--- a/debian/ferm.conf
+++ b/debian/ferm.conf
@@ -2,51 +2,43 @@
 #
 #  Configuration file for ferm(1).
 #
+domain (ip ip6) {
+    table filter {
+        chain INPUT {
+            policy DROP;
 
-table filter {
-    chain INPUT {
-        policy DROP;
+            # connection tracking
+            mod state state INVALID DROP;
+            mod state state (ESTABLISHED RELATED) ACCEPT;
 
-        # connection tracking
-        mod state state INVALID DROP;
-        mod state state (ESTABLISHED RELATED) ACCEPT;
+            # allow local packet
+            interface lo ACCEPT;
 
-        # allow local packet
-        interface lo ACCEPT;
+            # respond to ping
+            proto icmp ACCEPT; 
 
-        # respond to ping
-        proto icmp ACCEPT; 
+            # allow IPsec
+            proto udp dport 500 ACCEPT;
+            proto (esp ah) ACCEPT;
 
-        # allow IPsec
-        proto udp dport 500 ACCEPT;
-        proto (esp ah) ACCEPT;
+            # allow SSH connections
+            proto tcp dport ssh ACCEPT;
+        }
+        chain OUTPUT {
+            policy ACCEPT;
 
-        # allow SSH connections
-        proto tcp dport ssh ACCEPT;
-    }
-    chain OUTPUT {
-        policy ACCEPT;
+            # connection tracking
+            #mod state state INVALID DROP;
+            mod state state (ESTABLISHED RELATED) ACCEPT;
+        }
+        chain FORWARD {
+            policy DROP;
 
-        # connection tracking
-        #mod state state INVALID DROP;
-        mod state state (ESTABLISHED RELATED) ACCEPT;
-    }
-    chain FORWARD {
-        policy DROP;
-
-        # connection tracking
-        mod state state INVALID DROP;
-        mod state state (ESTABLISHED RELATED) ACCEPT;
+            # connection tracking
+            mod state state INVALID DROP;
+            mod state state (ESTABLISHED RELATED) ACCEPT;
+        }
     }
 }
 
-# IPv6:
-#domain ip6 {
-#    table filter {
-#        chain INPUT {
-#            policy ACCEPT;
-#            # ...
-#        }
-#        # ...
-#    }
-#}
+@include ferm.d/;
