Fixup for ferm.conf

--- a/debian/ferm.conf
+++ b/debian/ferm.conf
@@ -19,7 +19,11 @@ domain (ip ip6) {
 
             # allow IPsec
             proto udp dport 500 ACCEPT;
-            proto (esp ah) ACCEPT;
+	    @if @eq($DOMAIN, ip) {
+	      proto (esp ah) ACCEPT;
+	    } @else {
+	      proto (esp) ACCEPT;
+	    }
 
             # allow SSH connections
             proto tcp dport ssh ACCEPT;
