Use secure URI in Vcs control header.
Fixes lintian: vcs-field-uses-insecure-uri
See https://lintian.debian.org/tags/vcs-field-uses-insecure-uri.html for more details.

--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Standards-Version: 3.9.3
 Build-Depends: debhelper-compat (= 12)
 Build-Depends-Indep: po-debconf
 Vcs-Browser: https://github.com/formorer/pkg-ferm
-Vcs-Git: git://github.com/formorer/pkg-ferm.git
+Vcs-Git: https://github.com/formorer/pkg-ferm.git
 Homepage: http://ferm.foo-projects.org/
 
 Package: ferm
