--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Alexander Wirt <formorer@debian.org>
 Standards-Version: 3.9.3
-Build-Depends: debhelper (>= 9), dh-systemd
+Build-Depends: debhelper (>= 9), debhelper (>= 9.20160709)
 Build-Depends-Indep: po-debconf
 Vcs-Browser: https://github.com/formorer/pkg-ferm
 Vcs-Git: git://github.com/formorer/pkg-ferm.git
@@ -11,10 +11,10 @@ Homepage: http://ferm.foo-projects.org/
 
 Package: ferm
 Architecture: all
-Depends: debconf (>= 1.2.0),
-         iptables (>= 1.3),
-         lsb-base (>= 3.0-6),
-         perl (>= 5.6),
+Depends: debconf,
+         iptables,
+         lsb-base,
+         perl,
          ${misc:Depends}
 Recommends: libnet-dns-perl
 Description: maintain and setup complicated firewall rules
